release 1.13
- Fixed issue 964
  http://java.net/jira/browse/JERSEY-964
  Making *WebResource.Builders not final to make mocking possible.
- Fixed issue 985
  http://java.net/jira/browse/JERSEY-985
  Non-blocking client now takes ssl settings (via HTTPSPropertins) into account.

release 1.12 (02-2012)
- Fixed issue 671
  http://java.net/jira/browse/JERSEY-671
  Added missing createAircraftType() method to json-from-jaxb sample in JAXB ObjectFactory
- Fixed issue 934
  http://java.net/jira/browse/JERSEY-934
  Added '\n' to ResourceConfig.COMMON_DELIMITERS (to ease params declarations)
- Fixed issue 830
  http://java.net/jira/browse/JERSEY-830
  Fixed issue with WADL generation when dealing with nested generic types; added check before trying to cast Type to Class
- Fixed issue 874
  http://java.net/jira/browse/JERSEY-874
  Added "throws ClientHandlerException" to all methods declared in UniformInterface, same for its successors.
- Fixed issue 883 
  http://java.net/jira/browse/JERSEY-883
  Improved support for CDI Bean manager lookup
- Fixed issue 943
  http://java.net/jira/browse/JERSEY-943
  Fixed archetype jersey-quickstart-grizzly2.
- Fixed issue 907
  http://java.net/jira/browse/JERSEY-906
  Modified documentation (user guide) to reflect current implementation (client filter execution order).
- Fixed issue 906
  http://java.net/jira/browse/JERSEY-906
  Added missing grizzly-framework-2.1.2.jar file to the list of jars 'Non-maven developers require:' in getting-started guide
- Fixed issue 902
  http://java.net/jira/browse/JERSEY-902
  Fix broken links to JSR311 Javadocs in Overview of JAX-RS 1.1.1 chapter of Jersey User Guide.
- Fixed issue 840
  http://java.net/jira/browse/JERSEY-840
  Added jersey-grizzly2.jar to list required for non-maven developers to fix broken Getting Started section in the Jersey User Guide.
- Grizzly 2 version update (to 2.2.1)
- Switched implementation used in async http client from jetty to grizzly
- Fixed issue 898